5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1630_2920.log
== TEST (2019-04-02 16:32:26) 
-- CODE:
x=float(input("quantidade de gramas: "))
y=int(input("quantidade de bebidas: "))
z=int(input("quantidade de sobremesas: "))

s=26,90kg
S=3,50kg
so=3,00kg

print(float(r, 2))
-- ERROR:
File "XXXX", line 5
    s=26,90kg
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:32:49) 
-- CODE:
x=float(input("quantidade de gramas: "))
y=int(input("quantidade de bebidas: "))
z=int(input("quantidade de sobremesas: "))

s=26,90
S=3,50
so=3,00

print(float(r, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(float(r, 2))
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:33) 
-- CODE:
x=float(input("quantidade de gramas: "))
y=int(input("quantidade de bebidas: "))
z=int(input("quantidade de sobremesas: "))

s=26,90
S=3,50
so=3,00

print(float(round(2)
-- ERROR:
File "XXXX", line 10
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
